--- a/app/src/main/res/layout/activity_forgot_pass.xml
+++ b/app/src/main/res/layout/activity_forgot_pass.xml
@@ -25,7 +25,8 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_below="@+id/text1"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="30dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             >
@@ -41,7 +42,7 @@
             android:layout_marginBottom="4dp"
             android:layout_gravity="right"
 
-            android:text=" Forgot Password."/>
+            android:text=" Forgot Password"/>
             <View
                 android:id="@+id/SplitLine_hor3"
                 android:layout_width="match_parent"
@@ -55,7 +56,7 @@
                 android:id="@+id/ed_mail"
                 android:drawablePadding="10dp"
                 android:textSize="16dp"
-                android:hint="Enter the Register mail id"
+                android:hint="Enter your registered Email ID"
                 android:paddingRight="14dp"
                 android:paddingLeft="14dp"
                 android:background="@drawable/textback"
