--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_below="@+id/text1"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="10dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             >
@@ -57,7 +57,7 @@
                 android:background="@drawable/textback"
                 android:textColor="#000000"
                 android:inputType="textPassword"
-                android:hint="Password..."
+                android:hint="Password"
                 android:textColorHint="#d3d3d3"
                 android:layout_gravity="center_horizontal"
                 android:singleLine="true"
@@ -74,13 +74,14 @@
                 android:background="@drawable/textback"
                 android:layout_gravity="right"
                 android:layout_below="@id/ed_password"
-                android:text=" Forgot Password."/>
+                android:text=" Forgot Password"/>
             <Button
                 android:layout_width="fill_parent"
                 android:layout_height="40dp"
                 android:text="Login"
                 android:textAllCaps="false"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
                 android:id="@+id/btn_Submit"
                 android:textColor="#ff0066"
                 android:textSize="20dp"
@@ -129,131 +130,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="2dp"
             android:layout_below="@id/ed_password"
-            android:text=" Sign up now."/>
+            android:text=" Sign up now"/>
     </LinearLayout>
-    <!--<ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="25dp"
-        android:layout_marginRight="25dp"
-        android:layout_below="@+id/logoimage"
-        android:layout_centerInParent="true"
-        android:id="@+id/scrollView">
-       &lt;!&ndash; <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_below="@+id/text1"
-            android:layout_marginTop="10dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-           >&ndash;&gt;
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:id="@+id/ed_mail"
-                android:paddingLeft="10dp"
-                android:textSize="16dp"
-                android:hint="Email..."
-                android:background="@drawable/textback"
-                android:textColor="#000000"
-                android:textColorHint="#d3d3d3"
-                android:layout_gravity="center_horizontal"
-                android:singleLine="true"/>
 
-
-            <EditText
-                android:layout_marginTop="16dp"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:id="@+id/ed_password"
-                android:paddingLeft="10dp"
-                android:textSize="16dp"
-                android:background="@drawable/textback"
-                android:textColor="#000000"
-                android:inputType="textPassword"
-                android:hint="Password..."
-                android:textColorHint="#d3d3d3"
-                android:layout_gravity="center_horizontal"
-                android:singleLine="true"
-                />
-
-            <TextView android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#015480"
-                android:textSize="14dp"
-                android:textStyle="bold"
-                android:id="@+id/fpass1"
-                android:layout_marginTop="4dp"
-                android:layout_marginBottom="1dp"
-                android:gravity="left"
-                android:layout_below="@id/ed_password"
-                android:text=""/>
-
-            <TextView android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:textColor="#ffffff"
-                android:textSize="14dp"
-                android:textStyle="bold"
-                android:layout_marginTop="4dp"
-                android:id="@+id/fpass"
-                android:layout_marginBottom="10dp"
-                android:gravity="right"
-                android:layout_below="@id/ed_password"
-                android:text="Forgot Password?"/>
-            <Button
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:text="Sign In"
-                android:id="@+id/btn_Submit"
-                android:textColor="#ffffff"
-                android:textSize="26dp"
-                android:gravity="center"
-                android:layout_alignParentBottom="true"
-                android:background="#015480"
-                />
-            <View
-                android:id="@+id/SplitLine_hor3"
-                android:layout_width="match_parent"
-                android:layout_height= "1dp"
-                android:layout_below="@+id/btn_Submit"
-                android:layout_marginTop="10dp"
-                android:background="#015480" />
-
-
-      &lt;!&ndash;  </LinearLayout>&ndash;&gt;
-    </ScrollView>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:layout_weight="1"
-        android:layout_below="@+id/scrollView"
-        android:layout_centerHorizontal="true">
-        <TextView android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#ffffff"
-            android:textSize="16dp"
-            android:gravity="center"
-            android:padding="6dp"
-            android:textStyle="bold"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="2dp"
-            android:layout_below="@id/ed_password"
-            android:text="Not a memeber?"/>
-        <TextView android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#ffffff"
-            android:textSize="16dp"
-            android:gravity="center"
-            android:textStyle="bold"
-            android:id="@+id/tv_signup"
-            android:padding="6dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="2dp"
-            android:layout_below="@id/ed_password"
-            android:text=" Sign up now."/>
-    </LinearLayout>-->
 </RelativeLayout>
