--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -14,9 +14,10 @@
         android:layout_centerHorizontal="true" />
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginLeft="25dp"
         android:layout_marginRight="25dp"
+
         android:layout_below="@+id/logoimage"
         android:layout_centerInParent="true"
         android:id="@+id/scrollView">
@@ -25,7 +26,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_below="@+id/text1"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="10dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         >
@@ -33,10 +34,11 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:id="@+id/ed_firstName"
-        android:drawablePadding="10dp"
+        android:drawablePadding="6dp"
         android:textSize="16dp"
         android:hint="First Name"
         android:paddingRight="14dp"
+        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
         android:paddingLeft="14dp"
         android:background="@drawable/textback"
         android:drawableLeft="@drawable/first_name"
@@ -50,9 +52,11 @@
             android:layout_height="40dp"
             android:layout_marginTop="16dp"
             android:id="@+id/ed_lastName"
-            android:drawablePadding="10dp"
+
             android:textSize="16dp"
+            android:drawablePadding="6dp"
             android:hint="Last Name"
+            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
             android:paddingRight="14dp"
             android:paddingLeft="14dp"
             android:background="@drawable/textback"
@@ -66,7 +70,7 @@
             android:layout_height="40dp"
             android:layout_marginTop="16dp"
             android:id="@+id/ed_email"
-            android:drawablePadding="10dp"
+            android:drawablePadding="6dp"
             android:textSize="16dp"
             android:hint="Email"
             android:paddingRight="14dp"
@@ -82,10 +86,11 @@
             android:layout_height="40dp"
             android:layout_marginTop="16dp"
             android:id="@+id/ed_password"
-            android:drawablePadding="10dp"
+            android:drawablePadding="6dp"
             android:textSize="16dp"
             android:hint="Password"
             android:paddingRight="14dp"
+            android:inputType="textPassword"
             android:paddingLeft="14dp"
             android:background="@drawable/textback"
             android:drawableLeft="@drawable/pass_icon"
@@ -98,10 +103,11 @@
             android:layout_height="40dp"
             android:layout_marginTop="16dp"
             android:id="@+id/ed_age"
-            android:drawablePadding="10dp"
+            android:drawablePadding="6dp"
             android:textSize="16dp"
-            android:hint="age"
+            android:hint="Age"
             android:paddingRight="14dp"
+            android:inputType="number"
             android:paddingLeft="14dp"
             android:background="@drawable/textback"
             android:drawableLeft="@drawable/age"
@@ -112,7 +118,7 @@
         <Button
             android:layout_width="fill_parent"
             android:layout_height="40dp"
-            android:text="Registration"
+            android:text="Click here to register"
             android:layout_marginTop="20dp"
             android:id="@+id/btn_Submit"
             android:textColor="#ff0066"
