--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#B20043</color>
-    <color name="colorAccent">#d3d3d3</color>
+    <color name="colorAccent">#000000</color>
     <color name="Pink">#ff0066</color>
     <color name="my_spinner_text_color">#ffffff</color>
     <color name="text_shadow">#d3d3d3</color>
