--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -118,6 +118,7 @@
         <Button
             android:layout_width="fill_parent"
             android:layout_height="40dp"
+            android:layout_marginBottom="20dp"
             android:text="Click here to register"
             android:layout_marginTop="20dp"
             android:id="@+id/btn_Submit"
